yamls/deployment.yaml
# Deployment for Rick and Morty Characters Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rick-morty-service  # deployment name
  labels:
    app: rick-morty-service # application label
spec:
  replicas: 2  # number of pod replicas
  selector:
    matchLabels:
      app: rick-morty-service
  template:
    metadata:
      labels:
        app: rick-morty-service
    spec:
      containers:
      - name: rick-morty-service
        image: rick-morty-service:latest  # Docker image
        imagePullPolicy: Never  # use local image instead of pulling from registry
        ports:
        - containerPort: 5000  # Flask app port
        resources:            # Resources should be under the container spec
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
